# core.learning.public

./: .gitignore  README.md
apps/: README.md
apps/syllabus/: README.md  pyproject.toml
apps/syllabus/files/: common.sty  cursos.db  notas.csv  temario.csv  uea_planeacion.sty
apps/syllabus/src/syllabus/: core.py  main.py  utils.py
apps/syllabus/src/syllabus/conf/: config.yaml
apps/syllabus/src/syllabus/conf/curso/: symp.yaml
apps/syllabus/src/syllabus/conf/institution/: uam.yaml
apps/syllabus/src/syllabus/data/: _csv_driver.py  _sqlite_driver.py  loader.py
apps/syllabus/src/syllabus/ports/: dbs.py  tasks.py
apps/syllabus/src/syllabus/tasks/uam/: __init__.py  _syllabus.py  jinja_driver.py  trimestre.py
apps/syllabus/src/syllabus/tasks/uam/templates/: uami_eventos.tex.j2  uami_sesiones.tex.j2  uami_temario.tex.j2
biostatistics/R/: abrir_archivos_csv.Rmd
biostatistics/ggb/: Normal PDF.ggb  Poisson PDF.ggb  Uniforme PDF.ggb  Weibull PDF.ggb  p_value_normal.ggb
biostatistics/lectures/: p_value.xopp  p_value_decision.xopp  t-Test.xopp
fayd/: Contenido.ipynb  README.md
fayd/src/: crear_plantillas_senoidales.py  laplace_plane.py  load_files.py
machine_learning/: regression_class.py
machine_learning/lectures/: Untitled.ipynb  supervised.regression.introduction
machine_learning/src/: gen_data.py  lda_intuitive_2D.py  lda_intuitive_3D.py
manage_course/src/: _evaluate.py  clipboard2list.py  common.py  config (copia).yml  config.yml  evaluate.py  main.py  setup_curso.py  version_old.py
plantilla_docs_uam/: README.md
programming/: LICENSE
(+193 files in other folders)
